Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 6.0.0, 6.0.1
-
Fix Version/s: 5.15.9, 6.0.1, 6.1.0 Alpha
-
Component/s: Core: Other
-
Labels:None
-
Platform/s:
-
Commits:b101f84f86e541fa30c0d6d2a4e549cf51118706 (qt/qtbase/dev) b4937f32956b28f476bf9530d53576c23873024a (qt/qtbase/6.0) 2201f2425a19dfb594b8846cbc1a5622a8c7f5ca (qt/tqtc-qtbase/tqtc/lts-5.15)
Description
Needed to look at 32-bit build of Qt (to fix some other bug). Apparently, I cannot even build Qt Core due to some error in a 3rdparty (see attached for an error). In a nutshell, the issue is -Werror=unused-parameter.
My setup:
Ubuntu 16.04 32-bit
GCC-9
CMake line used:
cmake -G Ninja -DFEATURE_sanitize_address=ON -DFEATURE_developer_build=ON -DFEATURE_headersclean=OFF -DBUILD_WITH_PCH=OFF <path_to_qt5_qtbase>